<resources>
    <string name="app_name">registrationApp</string>
    <string name="header">Registration Form </string>
    <string name="subHeader">Welcome to Adventure Learning Club! </string>
    <string name="name">Full Name </string>
    <string name="name1">First Name</string>
    <string name="name2">Last Name</string>
    <string name="gender">Gender </string>
    <string name="f">Female</string>
    <string name="m">Male</string>
    <string name="studentID">Student ID </string>
    <string name="school">School </string>
    <string name="email">Email </string>
    <string name="phone">Phone </string>
    <string name="register">Register </string>
</resources>