<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--app name header not required so have been commented out.
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp" />
    -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:background="@color/greyishBlue"
        android:paddingLeft="35dp"
        android:paddingTop="35dp"
        android:text="@string/header"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyishBlue"
        android:layout_marginTop="-30dp"
        android:paddingLeft="35dp"
        android:paddingBottom="25dp"
        android:text="@string/subHeader"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-1dp" />

    <!--creates a divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"/>

    <!-- start of name field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-30dp"
            android:layout_weight="3"
            android:ems="3"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/name1"/>

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="3"
            android:textSize="15sp"
            android:inputType="text"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp"
            android:text="@string/name2"/>
    </LinearLayout>

    <!--start of gender -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="left"
            android:text="@string/gender" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4">
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"/>
            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"/>
        </RadioGroup>
    </LinearLayout>

    <!--start of student ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:text="@string/studentID"/>

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:ems="3"
            android:textSize="15sp"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:text="@string/school" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="3"
            android:textSize="15sp"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="3"
            android:textSize="15sp"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="3"
            android:textSize="15sp"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textAlignment="gravity"
            android:background="@drawable/formfield"
            android:layout_margin="3dp"
            android:padding="3dp" />

    </LinearLayout>

    <!-- button -->
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>